Add link to header and change search text

--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
 <!DOCTYPE html>
 
-<!--
-
-Run a find replace on:
-- DevpostURL -> Your Devpost URL: http://pennappsxii.devpost.com
-- HackathonName -> Your Hackathon Name -> PennApps XII
-
-You can also use your own favicon or Hackathon logo/header.
-
--->
-
 <html>
 <head>
   <meta charset='utf-8'>
@@ -36,7 +26,7 @@ You can also use your own favicon or Hackathon logo/header.
   <div class="container">
     <div id="header">
       <h1>
-          <img src="favicon.ico" style="vertical-align:middle; width:60px;"> CUhackit 2020
+          <a href = "."><img src="favicon.ico" style="vertical-align:middle; width:60px;"> CUhackit 2020</a>
       <h1>
     </div>
     <div id="fullTable"></div>
@@ -44,7 +34,7 @@ You can also use your own favicon or Hackathon logo/header.
 
   <script id="template" type="x-tmpl-mustache">
     <div class="search_container">
-      <input class="search" type="search" placeholder="Filter by project name, description, prize, or whatever" id="filter"/>
+      <input class="search" type="search" placeholder="Filter by project name, description, category, or whatever" id="filter"/>
     </div>
     <table id="expoTable">
       <thead>
